# parcel-plugin-wasm-pack

./: .editorconfig  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.js  jest.config.js  package.engines.json  package.json  release.config.js
.github/: dependabot.yml
examples/multiple/: package.json
examples/multiple/src/: index.js
examples/single/: Cargo.toml  package.json
examples/single/src/: index.js
src/: WasmPackAsset.js  WasmPackAsset.test.js  WasmPackPackager.js  WasmPackPackager.test.js  WasmPackRustAsset.js  WasmPackTomlAsset.js  cargo-install.js  cargo-install.test.js  child-process.js  helpers.js  helpers.test.js  loader.js  templates.js  templates.test.js
src/__fixtures__/asset/with-wasm-assets/: Cargo.toml
src/__fixtures__/asset/with-wasm-assets-and-custom-lib-path/: Cargo.toml
src/__fixtures__/asset/with-wasm-assets-and-custom-lib-path/src/: entry.rs
src/__fixtures__/asset/with-wasm-assets-missing-lib-crate-type-cdylib/: Cargo.toml
src/__fixtures__/asset/with-wasm-assets/src/: lib.rs
src/__fixtures__/packager/with-wasm-assets/: Cargo.toml
src/__fixtures__/packager/with-wasm-assets/src/: utils.rs
src/__fixtures__/with-wasm-assets/: Cargo.toml
src/__fixtures__/with-wasm-assets/src/: entry.js
src/__fixtures__/without-wasm-assets/src/: entry.js
src/__snapshots__/: WasmPackAsset.test.js.snap
src/loaders/: browser-wasm-loader.js  browser.js  node-wasm-loader.js
src/mixins/: cargo-config.js  generators.js  wasm-pack.js
(+3 files in other folders)
