[package]
name = "asset-with-wasm-assets"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.40", features = [ "console" ] }
console_error_panic_hook = { version = "0.1.6", optional = true }
